# genetic-betting

./: AGENTS.md  README.md  hello.py  pyproject.toml
.cursor/agents/: codebase-documenter.md  strategic-refactor.md
.cursor/plans/: hand_engine_refactors_8598f1a2.plan.md  repo_implementation_plan_41b26f8a.plan.md
.cursor/rules/: dependencies-uv.mdc  game-engine.mdc  python-pep8-docstrings.mdc  testing.mdc
.cursor/skills/extend-betting-rules/: SKILL.md
.cursor/skills/run-benchmarks/: SKILL.md
app/: __init__.py  actions.py  actor_view.py  cli.py  config.py  hand.py  legal_actions.py  match.py  strategies.py
config/: game-config-1.yaml  game.example.yaml
scripts/: benchmark_hands.py
tests/: test_actions_and_actor_view.py  test_cli.py  test_config.py  test_hand.py  test_match.py  test_observation.py  test_scaffold.py  test_strategies.py
