[project]
name = "genetic-betting"
version = "0.1.0"
description = "Configurable two-player betting game (simulation + future GA experiments)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
